--- a/website/templates/_post.html
+++ b/website/templates/_post.html
@@ -1,13 +1,13 @@
 <table class="table table-hover">
   <tr>
     <td width="50px">
-      <a href="{{ url_for('views.myprofile', name=user.name) }}">
+      <a href="{{ url_for('views.myprofile', name=post.author.name) }}">
           <img src="{{ post.author.avatar(50) }}">
       </a>
     </td>
     <td>
       <a class="user_popup" :w
-        href="{{ url_for('views.myprofile', name=user.name) }}">
+        href="{{ url_for('views.myprofile', name=post.author.name) }}">
         {{ post.author.name }}
       </a>
       posts:
