Some text on the index page

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -4,7 +4,8 @@
 
 {% block body_content %}
         <div class="container">
-        <h1 align="center" class="fw-normal">Welcome to my Flask Portfo Website</h1>
-        <p align="center" class="fw-normal">Lorem ipsum dolor sit amet,labore minima perspiciat</p>
+        <h1 align="center" class="fw-normal">Welcome to my Flask Portfo Web App</h1>
+        <br>
+        <p align="center" class="fw-normal">My Portfo Web App is a dynamic microblogging platform designed to empower users with seamless communication and content sharing.</p>
         </div>
 {% endblock %}
